chore: add docker compose file and github actions config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -202,8 +202,6 @@
     "no-restricted-syntax": "off"
   },
   "ignorePatterns": [
-    ".eslintrc.js",
-    "src/**/*.test.ts*",
-    "src/**/*.stories.ts*"
+    "vite.config.ts"
   ]
 }
