--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "vite",
     "build": "tsc && vite build",
     "format": "prettier --write \"src/**/*.ts*\"",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint \"src/**/*.ts*\" --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky install"
   },
