feat: get todos from local storage

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -120,7 +120,8 @@
         "format": [
           "camelCase",
           "snake_case"
-        ]
+        ],
+        "leadingUnderscore": "allow"
       },
       {
         "selector": "memberLike",
