--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@effector/reflect": "^8.3.1",
+    "effector": "^22.8.6",
+    "effector-react": "^22.5.3",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.7"
