--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "styled-components": "^6.0.7",
     "uuid": "^9.0.0"
   },
