--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "esModuleInterop": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -21,9 +22,9 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "src/*": ["./src/*"],
+      "src/*": ["./src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "src/setupTests"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
